@@ -133,7 +133,12 @@ class Dintero_HP {
 	 * @return    array     WooCommerce payment methods
 	 */
 	public function add_payment_gateway_class( $methods ) {
-		//$methods[] = 'WC_Gateway_Dintero_HP';
+		$embed_enable = WCDHP()->setting()->get('embed_enable');
+		$express_enable = WCDHP()->setting()->get('express_enable');
+
+		if ( 'yes' != $express_enable ) {
+			$methods[] = 'WC_Gateway_Dintero_HP';
+		}
 
 		return $methods;
 	}
